--- a/app/views/manage/show.html.erb
+++ b/app/views/manage/show.html.erb
@@ -1,3 +1,5 @@
+<%= test %>
+
 <h1 class="govuk-heading-xl">We did it!</h1>
 <p class="govuk-body">Welcome,</p>
 <pre><%= JSON.pretty_generate(@user) %></pre>
