--- a/app/views/reset_password/show.html.erb
+++ b/app/views/reset_password/show.html.erb
@@ -4,7 +4,8 @@
   <div class="govuk-grid-column-two-thirds">
     <%= render "govuk_publishing_components/components/heading", {
       text: t("reset_password.title"),
-      heading_level: 1
+      heading_level: 1,
+      margin_bottom: 4
     } %>
 
     <p class="govuk-body">
