--- a/app/views/reset_password/submit.html.erb
+++ b/app/views/reset_password/submit.html.erb
@@ -3,17 +3,16 @@
     <%= render "govuk_publishing_components/components/heading", {
       text: sanitize(t("reset_password.sent.title")),
       heading_level: 1,
-      margin_top: 0,
-      margin_bottom: 3,
+      margin_bottom: 4,
     } %>
 
     <p class="govuk-body"><%= sanitize(t("reset_password.sent.summary")) %></p>
-
 
     <%= render "govuk_publishing_components/components/heading", {
       text: sanitize(t("reset_password.sent.sub_heading")),
       heading_level: 2,
       font_size: 19,
+      margin_bottom: 2
     } %>
 
     <p class="govuk-body"><%= sanitize(t("reset_password.sent.resend_instructions")) %></p>
