Unfinished: Begin to shift overto use I8tn instead of hard coded strings
We've decided to close this branch in favour of another for expediency. We've booked a chat about testing on the 2nd Nov 2020, pushing this in an unfinished form as it may prove good reference for any new tests or future rewrites

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -26,17 +26,17 @@
 
         <%= render "govuk_publishing_components/components/radio", {
           name: "email_decision",
-          heading: t("devise.registrations.new.needs_email_decision.fields.emailsignup.heading"),
+          heading: t("devise.registrations.new.needs_email_decision.fields.email_signup.heading"),
           heading_size: "s",
           error_message: devise_error_items(:email_decision, @resource_error_messages),
           items: [
             {
               value: "yes",
-              text: t("devise.registrations.new.needs_email_decision.fields.emailsignup.yes")
+              text: t("devise.registrations.new.needs_email_decision.fields.email_signup.yes")
             },
             {
               value: "no",
-              text: t("devise.registrations.new.needs_email_decision.fields.emailsignup.no")
+              text: t("devise.registrations.new.needs_email_decision.fields.email_signup.no")
             }
           ]
         } %>
