Bypass references to removed paths when disabled
A number of views make reference to rails paths, including:
- Navigation links in the layout
- A feedback path in a footer
- A feedback link in the service alpha banner

Devise and warden will also make attempts to configure itself and has
expectations about routes. Now these have been overridden we will need
to stop Devise iniitalising too

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,15 +62,17 @@
   } %>
 
   <div class="govuk-width-container app-width-container">
-    <% message = capture do %>
-      <%= t("feedback.banners.phase_intro") %>
-      <a class="govuk-link" href='<%= feedback_form_path %>'><%= t("feedback.banners.phase_link") %></a>
-      <%= t("feedback.banners.phase_outro") %>
+    <% if phase_banner_enabled %>
+      <% message = capture do %>
+        <%= t("feedback.banners.phase_intro") %>
+        <a class="govuk-link" href='<%= feedback_form_path %>'><%= t("feedback.banners.phase_link") %></a>
+        <%= t("feedback.banners.phase_outro") %>
+      <% end %>
+      <%= render "govuk_publishing_components/components/phase_banner", {
+        phase: "alpha",
+        message: message
+      } %>
     <% end %>
-    <%= render "govuk_publishing_components/components/phase_banner", {
-      phase: "alpha",
-      message: message
-    } %>
 
     <main class="govuk-main-wrapper app-main-class" id="main-content" role="main">
       <%= yield %>
