Switch autocomplete off in password reset field
When email is not present, autocomplete attribute should be "off" rather
than "new-password"

--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -27,7 +27,7 @@
         name: "user[password]",
         id: "password",
         error_message: devise_error_items(:password),
-        autocomplete: "new-password",
+        autocomplete: @reset_email ? "new-password" : "off",
       } %>
 
       <%= render "govuk_publishing_components/components/button", {
