Rejig layout so that main does not contain nav
Restructured markup so that the main content of the page on the account
manager does not contain navigation.

Achieved this by moving the grid layout into the application layout
file. The account navigation was moved to a account_navigation content
block which, if present, is inserted before main in the application
layout file.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,10 +71,14 @@
       phase: "alpha",
       message: message
     } %>
-
-    <main class="govuk-main-wrapper app-main-class" id="main-content" role="main">
-      <%= yield %>
-    </main>
+    <div class="govuk-grid-row govuk-main-wrapper">
+      <%= yield :account_navigation %>
+      <div class="govuk-grid-column-two-thirds">
+        <main class="app-main-class" id="main-content" role="main">
+          <%= yield %>
+        </main>
+      </div>
+    </div>
   </div>
 
   <% if feedback_enabled_page %>
