Split apart security queries for visibility

--- a/app/views/security/show.html.erb
+++ b/app/views/security/show.html.erb
@@ -1,3 +1,6 @@
+<% @activity = activity %>
+<% @data_exchanges = data_exchanges %>
+
 <% content_for :title, t("account.security.heading") %>
 <% content_for :location, "security" %>
 
