--- a/app/views/security/show.html.erb
+++ b/app/views/security/show.html.erb
@@ -73,7 +73,8 @@
       } %>
 
       <dl class="govuk-summary-list">
-        <% @activity.each do |activity| %>
+        <%# This is to distinguish in the profiler trace from the Array#each above %>
+        <% @activity.each_with_index do |activity, _idx| %>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               <%= t("account.security.event.#{activity.name}") %>
