--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,7 +72,11 @@
       message: message
     } %>
     <div class="govuk-grid-row govuk-main-wrapper">
-      <%= yield :account_navigation %>
+      <% if content_for?(:account_navigation) %>
+        <div class="govuk-grid-column-one-third">
+          <%= yield :account_navigation %>
+        </div>
+      <% end %>
       <div class="govuk-grid-column-two-thirds">
         <main class="app-main-class" id="main-content" role="main">
           <%= yield %>
