--- a/app/views/edit_phone/show.html.erb
+++ b/app/views/edit_phone/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, t("mfa.phone.update.start.heading") %>
 <% content_for :location, "manage" %>
 <% content_for :account_navigation do %>
   <%= render "account-navigation", page_is: yield(:location) %>
