--- a/app/views/edit_phone/code.html.erb
+++ b/app/views/edit_phone/code.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, t("mfa.phone.code.change_heading") %>
 <%= render "govuk_publishing_components/components/heading", {
   text: t("mfa.phone.code.change_heading"),
   heading_level: 1,
