--- a/app/views/edit_phone/resend.html.erb
+++ b/app/views/edit_phone/resend.html.erb
@@ -3,7 +3,7 @@
 <%= render "govuk_publishing_components/components/back_link", { href: edit_user_registration_phone_code_path } %>
 
 <%= render "govuk_publishing_components/components/heading", {
-  text: t("mfa.phone.resend.heading"),
+  text: yield(:title),
   heading_level: 1,
   font_size: "xl",
   margin_top: 0,
